Changed button trigger mechanism to use data- attributes instead of parsing a long-ass id. Corrected button display on small screen. Launch and Destroy tests.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -660,3 +660,9 @@ label[for="dsp_name"] {
 		/* padding: 10px 15px; */
 	}
 }
+
+@media (max-width: 1299px) {
+	.hidden-toolbar-button {
+		display: none !important;
+	}
+}
